[project]
name = "mini-sglang"
version = "0.1.0"
description = "A lightweight SGLang implementation built from scratch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.0.0",
    "setproctitle>=1.3.6",
    "torch>=2.7.1",
    "transformers>=4.55.2",
    "zmq>=0.0.0",
]

[tool.codespell]
skip = "*.git,*.lock"
ignore-words-list = "cann"
